// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompoundField applies the correct styles when disabled is false 1`] = `
<div
  class="bg-grey400-dark border-grey100-dark rounded-[10px] border px-[10px] py-[8px] hover:border-primary300-mode1 "
>
  <span>
    Enabled Child
  </span>
</div>
`;

exports[`CompoundField applies the correct styles when disabled is true 1`] = `
<div
  class="bg-grey400-dark border-grey100-dark rounded-[10px] border px-[10px] py-[8px] hover:border-grey100-dark "
>
  <span>
    Disabled Child
  </span>
</div>
`;

exports[`CompoundField renders correctly with children 1`] = `
<div
  class="bg-grey400-dark border-grey100-dark rounded-[10px] border px-[10px] py-[8px] hover:border-primary300-mode1 "
>
  <span>
    Test Child
  </span>
</div>
`;
